--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,12 +1,10 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-name: swe645_2
+name: swe645-2
 labels:
-  app: swe645_2
+  app: swe645-2
 spec:
-strategy:
-  type: Recreate
 template:
   metadata:
     labels:
@@ -14,25 +12,7 @@ template:
       tier: swe645_2
   spec:
     containers:
-    - name: swe645_2
+    - name: swe645-2
       image: eyaron94/swe645_2:latest
-      imagePullPolicy: Always
       ports:
-      - containerPort: 5000
-        name: swe645_2
-
----
-apiVersion: v1
-kind: Service
-metadata:
-name: swe645_2
-labels:
-  app: swe645_2
-spec:
-ports:
-  - port: 5000
-    targetPort: 5000
-selector:
-  app: swe645_2
-  tier: swe645_2
-type: LoadBalancer
+      - containerPort: 8080
